--- a/divipay/package.json
+++ b/divipay/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "next": "15.1.7",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "postcss": "^8",
