--- a/divipay/package.json
+++ b/divipay/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "next": "15.1.7",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
