--- a/divipay/package.json
+++ b/divipay/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
+    "motion": "^12.4.7",
     "next": "15.1.7",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
